[package]
name = "get_extrinsics"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = { path = "../substrate-subxt", package = "substrate-subxt" }
sp-keyring = { git = "https://github.com/paritytech/substrate", package = "sp-keyring" }
primitives = { git = "https://github.com/paritytech/substrate", package = "sp-core" }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime" }
codec = { version = "1.1", package = "parity-scale-codec" }
async-std = "1.5.0"
