[package]
name = "ext2bin"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = { path = "../substrate-subxt", package = "substrate-subxt" }
primitives = { git = "https://github.com/paritytech/substrate", package = "sp-core" }
# sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime" }
codec = { version = "1.1", package = "parity-scale-codec" }
async-std = "1.5.0"
clap = { version = "2.33.0", features = ["yaml"] }
derive_builder = "0.9.0"
